@startuml Festival

class Festival{
    - String nombre;
    - String ubicacion;
    - Date fecha;
}

class Artista{
    - String nombre;
    - String generomusical;
    - String nacionalidad;
}

class Concierto{
    - String nombre;
    - int duracion;
}

class Escenario{
    - String nombre;
    - int capacidad;
    - List<Espectador> espectadores;
}

class Espectador{
    - String nombre;
    - int edad;
}


' RELACIONES
Festival "1" -- "*" Concierto : Albergar
Espectador "*" -- "1" Festival : Asistir
Concierto "1" -- "*" Espectador : Soportar
Concierto "1" -- "1" Escenario : Asignar
Artista "1" -- "1" Concierto : Cantar 